--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -54,8 +54,9 @@ jobs:
       
       - name: Terraform Plan
         id: plan
-        run: terraform plan -color=false -input=false -out=planfile -chdir=./terraform  # Change './terraform' to your configuration directory
+        run: terraform -chdir=./terraform plan -input=false -out=planfile -color=false
         continue-on-error: true
+
 
 
 
