--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -54,7 +54,7 @@ jobs:
       
       - name: Terraform Plan
         id: plan
-        run: terraform -chdir=./terraform plan -input=false -out=planfile 
+        run: terraform plan -no-color -input=false -out planfile
         continue-on-error: true
 
 
