--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -34,8 +34,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set Up Terraform
+              # Step 2: Setup Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.0
 
       - name: Terraform Init
         id: init
