--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.0
+          terraform_version: 1.6.3
 
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="bucket=${{ secrets.BUCKET_TF_STATE }}"
+        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
 
       - name: Terraform Format Check
         run: terraform fmt --check
